add img directory

--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<title>Title</title>
+		<title>About Erik</title>
 	</head>
 	<body>
-		
+		<h1>Erik likes things</h1>
+		<p>I was born and raised in New Mexico and actually grew up in the same house as my mom.<br>
+
+		</p>
 	</body>
 </html>
