add img directory

--- a/index.html
+++ b/index.html
@@ -6,8 +6,14 @@
 	</head>
 	<body>
 		<h1>Erik likes things</h1>
-		<p>I was born and raised in New Mexico and actually grew up in the same house as my mom.<br>
-
+		<p>I was born and raised in New Mexico and actually grew up in the same house as my mom.<br></p>
+		<p> Even as a little tyke I was into finding creative solutions. Ultimately that led me to going to art school<br>
+		Then design school<br>
+		... and eventually I found myself googling frontend dev<br>
+			which resulted in me attending DeepDive
 		</p>
+
+		<img src="" alt="">
+		
 	</body>
 </html>
