--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			which resulted in me attending DeepDive
 		</p>
 
-		<img src="img/erik.JPG"/>
+		<img src="./img/erik.JPG"/>
 
 	</body>
 </html>
