--- a/index.html
+++ b/index.html
@@ -9,11 +9,20 @@
 		<p>I was born and raised in New Mexico and actually grew up in the same house as my mom.<br></p>
 		<p> Even as a little tyke I was into finding creative solutions. Ultimately that led me to going to art school<br>
 		Then design school<br>
-		... and eventually I found myself googling frontend dev<br>
+		... and eventually I found myself googling frontend dev...<br>
 			which resulted in me attending DeepDive
 		</p>
 
-		<img src="./img/erik.JPG" height="350" width="auto">
+		<img src="./img/erik.JPG" height="350" width="auto" style="
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	padding-top: 10%;
+	-webkit-transform: rotate(90deg);
+	-moz-transform: rotate(90deg);
+	-o-transform: rotate(90deg);
+	-ms-transform: rotate(90deg);
+	transform: rotate(90deg);">
 
 	</body>
 </html>
