--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 	<body>
 		<h1>Erik likes things</h1>
 		<p>I was born and raised in New Mexico and actually grew up in the same house as my mom.<br></p>
-		<p> Even as a little tyke I was into finding creative solutions. Ultimately that led me to going to art school<br>
-		Then design school<br>
-		... and eventually I found myself googling frontend dev...<br>
-			which resulted in me attending DeepDive
+		<p> Even as a little tyke I was into finding creative solutions. Ultimately that led me to going to art school.<br>
+			Then design school<br>
+			Eventually I found myself googling frontend dev...<br>
+			...which resulted in me attending DeepDive.
 		</p>
 
 		<img src="./img/erik.JPG" height="350" width="auto" style="
