add img directory

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>About Erik</title>
+		<link rel="stylesheet" href="./style">
 	</head>
 	<body>
 		<h1>Erik likes things</h1>
@@ -13,16 +14,7 @@
 			...which resulted in me attending DeepDive.
 		</p>
 
-		<img src="./img/erik.JPG" height="350" width="auto" style="
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
-	padding-top: 10%;
-	-webkit-transform: rotate(90deg);
-	-moz-transform: rotate(90deg);
-	-o-transform: rotate(90deg);
-	-ms-transform: rotate(90deg);
-	transform: rotate(90deg);">
+		<img src="./img/erik.JPG" height="350" width="auto">
 
 	</body>
 </html>
