add img directory

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>About Erik</title>
-		<link rel="stylesheet" href="./style">
+		<link rel="stylesheet" href="./style/style.css">
 	</head>
 	<body>
 		<h1>Erik likes things</h1>
